--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">Weekly Tip #7</string>
+    <string name="app_name">Weekly Tip #8</string>
     <string name="title_run_code">Run code</string>
     <string name="title_clear">Clear log</string>
-    <string name="intro_text">This is the sample app for tip #7, creating a Java unit test.</string>
+    <string name="intro_text">This is the sample app for tip #8, managing layouts with ConstraintLayout.</string>
 </resources>
