--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">Weekly Tip #4</string>
+    <string name="app_name">Weekly Tip #5</string>
     <string name="title_run_code">Run code</string>
     <string name="title_clear">Clear log</string>
-    <string name="intro_text">This is the sample app for tip #4, converting a layout to ConstraintLayout.</string>
+    <string name="intro_text">This is the sample app for tip #5, managing global data with singleton classes.</string>
 </resources>
