--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,5 @@
     <string name="app_name">Weekly Tip #9</string>
     <string name="title_run_code">Run code</string>
     <string name="title_clear">Clear log</string>
-    <string name="intro_text">This is the sample app for tip #9, creating Kotlin classes.</string>
+    <string name="intro_text">This is the sample app for tip #9, running a background task in an IntentService.</string>
 </resources>
