--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">Weekly Tip #9</string>
+    <string name="app_name">Weekly Tip #10</string>
     <string name="title_run_code">Run code</string>
     <string name="title_clear">Clear log</string>
-    <string name="intro_text">This is the sample app for tip #9, running a background task in an IntentService.</string>
+    <string name="intro_text">This is the sample app for tip #10, broadcasting messages with EventBus.</string>
 </resources>
