--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,5 @@
     <string name="app_name">Weekly Tip #1</string>
     <string name="title_run_code">Run code</string>
     <string name="title_clear">Clear log</string>
-    <string name="intro_text">This is the sample app for tip #1, communicating with Snackbar messages.</string>
+    <string name="intro_text">This is the sample app for tip #1, communicating with Snackbar messages and more.</string>
 </resources>
