--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,9 @@
     <string name="app_name">Weekly Tips</string>
     <string name="title_run_code">Run code</string>
     <string name="title_clear">Clear log</string>
-    <string name="intro_text">Tip 14: Persisting data with Realm.</string>
+    <string name="intro_text">Tip 15: Playing audio from the assets directory.</string>
     <string name="add_data">Add data</string>
     <string name="query_data">Query data</string>
+    <string name="play">Play</string>
+    <string name="stop">Stop</string>
 </resources>
