--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,6 @@
 <resources>
     <string name="app_name">Weekly Tips</string>
-    <string name="title_run_code">Run code</string>
-    <string name="title_clear">Clear log</string>
-    <string name="intro_text">Tip 14: Persisting data with Realm.</string>
-    <string name="add_data">Add data</string>
-    <string name="query_data">Query data</string>
+    <string name="intro_text">Tip 22: .</string>
+    <string name="run_code">Run code</string>
+    <string name="clear_log">Clear log</string>
 </resources>
