--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Weekly Tips</string>
-    <string name="intro_text">Tip 22: Make a web service call with Retrofit.</string>
+    <string name="intro_text">Tip 24: Make an asynchronous web service call with Retrofit.</string>
     <string name="run_code">Run code</string>
     <string name="clear_log">Clear log</string>
 </resources>
